--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,7 @@
   
   .header .header-link:hover {
     text-decoration: underline;
+    cursor: pointer;
     text-underline-offset: 0.3em;
   }
   
@@ -443,3 +444,82 @@
   .hidden{
     display: none;
   }
+
+/* popup */
+.popup {
+  display: none;
+  position: absolute;
+  top: 15%; 
+  right: 2%;
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 20;
+  padding: 10px;
+  height: 19%;
+  width: 22%; 
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+}
+
+.popup.show {
+  display: block;
+  z-index: 10;
+}
+
+.overlay.show {
+  display: block;
+  z-index: 5;
+}
+
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  cursor: auto;
+}
+
+.top-section {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.left-column {
+  width: 30%;
+}
+
+.right-column {
+  font-size: 0.6em;
+  font-weight: 300;
+}
+
+.name-row {
+  font-weight: 500;
+}
+
+.bottom-section {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.logout-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  padding: 8px 10px;
+}
+
+.logout-btn:hover {
+  background-color: #0069d9;
+  cursor: pointer;
+}
